src/objects/Common_Issue__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>CEC Common Issue</description>
    <fields>
        <fullName>Attached_File_1__c</fullName>
        <label>Attached File 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attached_File_2__c</fullName>
        <label>Attached File 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attached_File_3__c</fullName>
        <label>Attached File 3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Information_Source_Date__c</fullName>
        <label>Information Source/Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Common Issue</label>
    <pluralLabel>Common Issues</pluralLabel>
</CustomObject>